--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,4 +1,21 @@
 {% extends "blog/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
-    <h1>Login Page</h1>
+    <div class="content-section">
+        <form action="{% url 'users-login' %}" method="post">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Log In</legend>
+                {{ form | crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Sign In</button>
+            </div>
+        </form>
+        <div class="border-top pt-3">
+            <small class="text-muted">
+                Need An Account? <a href="{% url 'users-register' %}" class="ml-2">Sign Up</a>
+            </small>
+        </div>
+    </div>
 {% endblock content %}
